Fix version endpoint using git-properties gradle plugin.