@@ -1,16 +1,18 @@
 package bio.terra.catalog.config;
 
-import java.util.Collections;
+import java.util.Map;
 import org.springframework.beans.factory.InitializingBean;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.context.properties.ConfigurationProperties;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.context.annotation.PropertySource;
 import org.springframework.core.env.ConfigurableEnvironment;
 import org.springframework.core.env.MapPropertySource;
 
-/** Read from the version.properties file auto-generated at build time */
+/** Read from the git.properties file auto-generated at build time */
 @Configuration
-@ConfigurationProperties(prefix = "version")
+@ConfigurationProperties("catalog.version")
+@PropertySource("git.properties")
 public class VersionConfiguration implements InitializingBean {
   private final ConfigurableEnvironment configurableEnvironment;
   private String gitHash;
@@ -55,7 +57,6 @@ public class VersionConfiguration implements InitializingBean {
     configurableEnvironment
         .getPropertySources()
         .addFirst(
-            new MapPropertySource(
-                "version", Collections.singletonMap("spring.application.version", getBuild())));
+            new MapPropertySource("version", Map.of("spring.application.version", getBuild())));
   }
 }
